--- a/views/upload.pug
+++ b/views/upload.pug
@@ -10,6 +10,6 @@ block content
   script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-filestyle/2.1.0/bootstrap-filestyle.js', integrity='sha256-X1IDNCiaH2URW+Q73Zwq2mM3uB2jcoaUgNAzUEzCfNs=', crossorigin='anonymous')
 
   form#uploadForm(action="/upload" enctype="multipart/form-data" method="post")
-    input#uploadFiles(type="file" name="file" multiple="multiple" class="filestyle" data-dragdrop="false" data-btnClass="btn-primary" data-size="sm" data-input="true" data-text="选择文件" data-placeholder="未有文件选中")
+    input#uploadFiles(type="file" required name="file" multiple="multiple" class="filestyle" data-dragdrop="false" data-btnClass="btn-primary" data-size="sm" data-input="true" data-text="选择文件" data-placeholder="未有文件选中")
     br
     input(type="submit" value="上传")
